package PatientFile;

public enum Gender {
    MALE,
    FEMALE,
    OTHER
}
